--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">RadarNavi</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_syncdata">Sync Radar Data</string>
 
 </resources>
