--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_syncdata">Sync Radar Data</string>
+    <string name="action_navi">navi</string>
+    <string name="action_plan">plan</string>
 
 </resources>
