enhanced the app a bit

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_syncdata">Sync Radar Data</string>
     <string name="action_navi">navi</string>
     <string name="action_plan">plan</string>
+    <string name="action_rst">reset</string>
     <string name="title_navi_guide">navi guide</string>
 
 </resources>
